--- a/proj_optim.ipynb
+++ b/proj_optim.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modélisation\n",
+    "## 1. Modélisation\n",
     "\n",
     "Ecrivons la relation entre les variations de prix et de quantité produites : \n",
     "$x_{g}$ est la quantité de gouda vendue, $\\epsilon_{g}$ l'élasticité prix associée.\n",
@@ -51,9 +51,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyse du problème\n",
+    "## 2. Analyse du problème\n",
+    "\n",
+    "$\\underline{\\textbf{Question 1 :}}$\n",
+    "\n",
     "Etudions la fonction $g=-f$ à minimiser. \n",
     "Après implémentation des valeurs numériques des différents paramètres, on a : en notant 1 l'indice du lait, 2 l'indice du beurre, 3 l'indice du gouda, 4 l'indice de l'edam : \n",
+    "\n",
+    "$\\textbf{Système 1:}$\n",
+    "\n",
     "x1 = −1.5413 * p1 + 2671\n",
     "\n",
     "x2 = −0.0203 * p2 + 135,\n",
@@ -68,9 +74,24 @@
     "\n",
     "0.0160 * x1 + 0.0004 * x2 + 0.0005 * x3 + 0.0002 * x4 ≤ 10. Social\n",
     "\n",
-    "Finalement, en remplaçant les $x_{i}$ par leur expression en fonction de $p_{i}$ dans la fonction, on obtient g(p) = $-b^{t}*p + \\frac{1}{2} * p^{t} * A * p$ avec A et B connus. Les conditions étant linéaire, elles peuvent être résumées dans la condition $C*p \\le d$.\n",
+    "$x_i$ > 0 pour i allant de 1 à 4\n",
     "\n",
-    "Identifions la fonction g : le hessien de g vaut $\\frac{A^{t}+A}{2}=A$ car A est symétrique. Etudions l'éventuelle positivité de A : en calculant son polynôme caractéristique, on obtient : $(X-3.0825)(X-0.0405)(X^{2}-0.0811X+0.00145379)$. La somme et le produit des racines du troisième facteur sont tous les deux positifs, ces racines sont donc positives. Il s'agit donc d'une matrice définie positive (KerA est l'ensemble vide). On a donc que le hessien de g est défini positif, donc g est strictement convexe, et même alpha-convexe : on a que le hessien de g est constant et strictement positif, donc avec alpha = inf{vap(A)}>0, on a bien que le hessien de g est supérieur ou égal à alpha*Id (leur différence est définie positive). Au niveau du conditionnement, on a un inégalité sur un système linéaire. Donc la fonction qui à p associe c(p) est convexe.C est une matrice de taille (7, 4). On a donc à minimiser une fonction convexe sur un ensemble convexe(car c est linéaire), donc ce problème de minimisation admet une unique solution. Au vu de la forme quadratique de notre fonction à minimiser, ainsi que de la linéarité des contraintes, l'algorithme qui paraît le plus adapté est l'algorithme des contraintes actives QP, qui converge en un nombre fini d'itérations vers l'unique optimum global du système. Cependant, cet algorithme nécessite d'utiliser des fonctions de minimisation avec contrainte égalité de scipy, ce qui est dommage, donc on préferera utiliser l'algorithme d'Arrow Hurwicz pour le calcul des coûts optimaux. "
+    "Finalement, en remplaçant les $x_{i}$ par leur expression en fonction de $p_{i}$ dans la fonction, on obtient $g(p)$ = $-b^{t}*p + \\frac{1}{2} * p^{t} * A * p$ avec A et B connus. Les conditions étant linéaires, elles peuvent être résumées dans la condition $C*p \\le d$.\n",
+    "\n",
+    "Identifions la fonction g : le hessien de g vaut $\\frac{A^{t}+A}{2}=A$ car A est symétrique. Etudions l'éventuelle positivité de A : en calculant son polynôme caractéristique, on obtient : $(X-3.0825)(X-0.0405)(X^{2}-0.0811X+0.00145379)$. \n",
+    "\n",
+    "La somme et le produit des racines du troisième facteur sont tous les deux positifs, ces racines sont donc positives. Il s'agit donc d'une matrice définie positive (KerA est l'ensemble vide). On a donc que le hessien de g est défini positif, donc $\\textbf{g est strictement convexe, et même $\\alpha$-convexe}$ : le hessien de g étant constant et strictement positif, avec $\\alpha$ = inf{vap(A)}>0, on obtient que le hessien de g est supérieur ou égal à $\\alpha$*Id (leur différence est définie positive).\n",
+    "\n",
+    "Au niveau du conditionnement, on a un inégalité sur un système linéaire. Donc si on considère l'ensemble des points respectant la contrainte $Cp \\le d$, cet ensemble est convexe. On a donc à minimiser une fonction convexe sur un ensemble convexe, donc ce problème de minimisation admet une unique solution. Au vu de la forme quadratique de notre fonction à minimiser, ainsi que de la linéarité des contraintes, l'algorithme qui paraît le plus adapté est l'algorithme des $\\textbf{contraintes actives QP}$, qui converge en un nombre fini d'itérations vers l'unique optimum global du système. Cependant, cet algorithme nécessite d'utiliser des fonctions de minimisation avec contrainte égalité de scipy, ce qui est dommage, donc on préferera utiliser l'algorithme $\\textbf{d'Arrow Hurwicz}$ pour le calcul des coûts optimaux. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\underline{\\textbf{Question 2 :}}$\n",
+    "\n",
+    "$\\textbf{Ordre de grandeur}$ : On s'attend à obtenir des prix aux alentours de 1 euro pour le lait et entre 5 et 10 euros pour les fromages (prix sur le marché)"
    ]
   },
   {
@@ -79,6 +100,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Algorithme de résolution\n",
+    "\n",
+    "#Implémantation des données\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "from scipy.optimize import minimize\n",
     "C = np.array([[-0.0401, -0.0162, -0.0039, 0.0002],\n",
@@ -92,40 +118,7 @@
     "A[0][0] = 3.0825 ;A[1][1] = 0.0405 ; A[2][2] = 0.0271 ; A[3][3] = 0.0054 ; A[2][3] = -0.0031 ; A[3][2] = -0.0031 ;\n",
     "A\n",
     "b = np.array([-2671, -135, -103, -19])#on prend -b pour  avoir la forme quadratique classique\n",
-    "d = np.array([-92.6, -29.0, 2671, 135, 103, 19, 10])\n",
-    "def QP(A, b, C, d, w_0, x_0):\n",
-    "    pas_fini = True\n",
-    "    w = w_0 ; x_k = x_0\n",
-    "    while pas_fini : #on regarde KKT : -grad g = ? sum(lambda i ci)\n",
-    "        grad_g = b - A.dot(x_k)\n",
-    "        C_w = np.zeros((len(w), 4))\n",
-    "        for i in range(len(w)) : \n",
-    "            C_w[i] = np.copy(C[w[i]])#C_w est construit pour forcer à être CL des contraintes actives uniquement\n",
-    "        lambds = np.linalg.solve(np.transpose(C_w), -grad_g)\n",
-    "        if all(lambds) > 0 : \n",
-    "            pas_fini = False\n",
-    "        else :\n",
-    "            #on résout min\n",
-    "            def constrain(x):\n",
-    "                return C_w.dot(x)\n",
-    "            def f_p(p):\n",
-    "                return 0.5 * np.transpose(p).dot(A).dot(p) + np.transpose(A.dot(x_k)+d).dot(p)\n",
-    "            pk = minimize(f_p, 0, method = \"SLSQP\", constraints = {\"fun\" : constrain, \"type\" : \"eq\"}).x\n",
-    "            if pk != 0:\n",
-    "                w_c = list(set([i for i in range(len(C))])-set(w))\n",
-    "                for i in range(w_c):#sur i n'appartenant pas à l'espace de travail\n",
-    "                    if np.transpose(C[i]).dot(pk)<= 0:\n",
-    "                        w_c.pop(i)\n",
-    "                boue = [(d[i]-np.transpose(C[i]).dot(x_k))/(np.transpose(C[i]).dot(pk)) for i in w_c]\n",
-    "                m = min(boue)\n",
-    "                alphak = min(1, m)\n",
-    "                if alphak < 1 : \n",
-    "                    j = argmin(boue)\n",
-    "                    w.append(j)\n",
-    "    return x_k\n",
-    "\n",
-    "\n",
-    "print(QP(A, b, C, d, [], np.zeros(4)))\n"
+    "d = np.array([-92.6, -29.0, 2671, 135, 103, 19, 10])"
    ]
   },
   {
@@ -134,30 +127,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def norm_lag(A, b, C, d, x, lambd):\n",
-    "    grad_x = A.dot(x)+b\n",
-    "    return np.sqrt(np.linalg.norm(A.dot(x)+b)**2+np.linalg.norm(C.dot(x)-d)**2)\n",
+    "#Algorithme D'Arrow-Hurwicz\n",
     "\n",
-    "def optim_gradient_fixed_step(grad_fun, x0, l, max_iter = 100000, epsilon_grad_fun = 1e-8):\n",
-    "    # To complete\n",
-    "    i = 0\n",
-    "    gradi = grad_fun(x0)\n",
-    "    xk = x0\n",
-    "    while (i < max_iter and np.linalg.norm(gradi) > epsilon_grad_fun): \n",
-    "        gradi = grad_fun(xk)\n",
-    "        xk -= l * gradi\n",
-    "        i += 1\n",
-    "    return xk, i\n",
+    "#Le lagrangien s'écrit : 0.5*np.transpose(x).dot(A).dot(x) + np.transpose(b).dot(x) +np.transpose(lambdk).dot(C.dot(x)-d)\n",
     "\n",
-    "\n",
-    "def Arrow(A, b, C, d, x0, lambd0, alpha, eps, max_iter, norm_lim):\n",
+    "def Arrow_Hurwizc(A, b, C, d, x0, lambd0, alpha, eps, max_iter, norm_lim):\n",
     "    xk = x0 ; lambdk = lambd0 ; k = 0\n",
-    "    def lag(x):\n",
-    "        return 0.5*np.transpose(x).dot(A).dot(x) + np.transpose(b).dot(x) +np.transpose(lambdk).dot(C.dot(x)-d)\n",
-    "    def grad_lag(x):\n",
+    "    def diff_x_lag(x): #Calcul de la différentielle partielle selon x du lagrangien\n",
     "        return A.dot(x)+b+np.transpose(C).dot(lambdk)\n",
     "    while k < max_iter:\n",
-    "        xk -= grad_lag(xk)*eps\n",
+    "        xk -= diff_x_lag(xk)*eps\n",
     "        lambdk += alpha * (C.dot(xk)-d)\n",
     "        for l in range(len(lambdk)) : \n",
     "            if lambdk[l] < 0 :\n",
@@ -165,8 +144,22 @@
     "        k += 1\n",
     "    return (xk, k)\n",
     "            \n",
-    "x = Arrow(A, b, C, d, np.ones(4), np.zeros(7), 0.1, 0.1, 1500000, 0.01)  \n",
-    "x"
+    "x = Arrow_Hurwizc(A, b, C, d, np.ones(4), np.zeros(7), 0.1, 0.1, 1500000, 0.01)  \n",
+    "x\n",
+    "\n",
+    "'''Si on veut utiliser l'algorithme D'uzawa plutôt que celui d'Arrow-Hurwizc, on a juste à remplacer la ligne de modification \n",
+    "du xk dans Arrow_Hurwizc par un calcul de minimum à lambda fixé. C'est le rôle de optim_gradient_fixed_step '''\n",
+    "\n",
+    "\n",
+    "def optim_gradient_fixed_step(grad_fun, x0, l, max_iter = 100000, epsilon_grad_fun = 1e-8):\n",
+    "    i = 0\n",
+    "    gradi = grad_fun(x0)\n",
+    "    xk = x0\n",
+    "    while (i < max_iter and np.linalg.norm(gradi) > epsilon_grad_fun): \n",
+    "        gradi = grad_fun(xk)\n",
+    "        xk -= l * gradi\n",
+    "        i += 1\n",
+    "    return xk, i"
    ]
   },
   {
@@ -175,10 +168,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grad_lag(x):\n",
-    "        return A.dot(x)+b\n",
+    "#Solutions qu'on obtient grâce à l'algorithme Arrow_Hurwizc en le faisant tourner 1 000 000 et 1 500 000 fois. \n",
     "e_1000000 = np.array([ 420.34504894, 4024.64289728, 2775.35063497, 1395.22825295])\n",
-    "e_1_500_000 = np.array([ 420.23444463, 4025.00227769, 2774.96412957, 1394.00155788])"
+    "e_1_500_000 = np.array([ 420.23444463, 4025.00227769, 2774.96412957, 1394.00155788])\n",
+    "#On remarque que l'algorithme converge vers les mêmes prix"
    ]
   },
   {
@@ -187,6 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#On vérifie l'état des contraintes correspondant à la solution obtenue. \n",
     "C.dot(e_1_500_000)-d"
    ]
   },
@@ -194,7 +188,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Après utilisation de l'algorithme d'Arrow-Hurwicz, on obtient une convergence vers p =[ 420.23444463, 4025.00227769, 2774.96412957, 1394.00155788]. On observe également que les multiplicateurs de Lagrange des contraintes 1 et 7 sont nuls, ce qui signifie que ces contraintes sont les deux seules contraintes à ne pas être actives. La solution x* du problème est telle que pour tout i $\\in \\Lambda$ l'ensemble des indices des contraintes actives, on ait ci(x*) = 0, soit$(Cx^{*})_i = d_i$. Ici, les contraintes actives sont les contraintes 2, 3, 4, 5, et 6. Du coup, \n",
+    "$\\textbf{Commentaires}$ : Le vecteur de prix, en euros par tonne, correspond bien aux ordres de grandeur que nous avions envisagé.\n",
+    "A titre d'informations, nous avons calculoé les quantités optimales qui correspondent.\n",
+    "\n",
+    "On trouve le vecteur quantité correspondant \n",
+    "X = $\n",
+    "\\begin{pmatrix}\n",
+    " 2023,1 \\\\[3mm]\n",
+    "53,3 \\\\[3mm]\n",
+    "65,3 \\\\[3mm]\n",
+    "19.7\\\\\n",
+    "\\end{pmatrix}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Après utilisation de l'algorithme d'Arrow-Hurwicz, on obtient une convergence vers p =[ 420.23444463, 4025.00227769, 2774.96412957, 1394.00155788]. On observe également que les multiplicateurs de Lagrange des contraintes 1 et 7 sont nuls, ce qui signifie que ces contraintes sont les deux seules contraintes à ne pas être actives. La solution x* du problème est telle que pour tout i $\\in \\Lambda$ l'ensemble des indices des contraintes actives, on ait ci(x*) = 0, soit$(Cx^{*})_i = d_i$. Ici, les contraintes actives sont les contraintes 2, 3, 4, 5, et 6. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Etude avancée \n",
+    "$\\underline{\\textbf{Question 1 :}}$\n",
+    "\n",
+    "Ainsi, \n",
     "\n",
     "$\\begin{pmatrix}-0.1326&-0.0004&-0.0034&0.0006\\\\\n",
     "1.5413&0&0&0\\\\\n",
@@ -212,7 +234,12 @@
     "103\\\\\n",
     "19\\\\\n",
     "\\end{pmatrix}$\n",
-    "On considère une perturbation de l'élasticité-prix de chacun des produits. Si on note x* la solution de notre problème non perturbé et $\\lambda$* le multiplicateur de Lagrange associé, x* vérifie l'équation matricielle au dessus. Si on perturbe les élasticités, en calculant Cix"
+    "\n",
+    "$\\underline{\\textbf{Question 2 :}}$\n",
+    "\n",
+    "On considère une perturbation de l'élasticité-prix de chacun des produits. Si on note x* la solution de notre problème non perturbé et $\\lambda$* le multiplicateur de Lagrange associé, x* vérifie l'équation matricielle au dessus. Si on perturbe les élasticités, en calculant Cix\n",
+    "\n",
+    "$\\underline{\\textbf{Question 3 :}}$\n"
    ]
   }
  ],
